Get performance_browser_tests working again.

Fixes:

1. The timestamp field in the event traces has been made consistent
(between the Capture and OnBufferReceived trace events). This allows
pipeline tracking of individual frames (and fixes the 97-100% drop rate
bug).

2. Add BUILD.gn target dependencies to build browser PAK/resources that
are required in order to run the binary.

3. Allow thread-blocking in media::cast::test::UDPProxyImpl.

Bug: 789192, 816466, 806238
Change-Id: If606989e8ea5eea34fd25e58246ecb7dd9cb75d1
Reviewed-on: https://chromium-review.googlesource.com/c/1308103
Reviewed-by: Takumi Fujimoto <takumif@chromium.org>
Commit-Queue: Yuri Wiitala <miu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604023}
Former-commit-id: c9cee7e5db8b778279bf39c3a249ab1140616b83