media/cast/test/utility/udp_proxy.cc
@@ -17,6 +17,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "base/rand_util.h"
 #include "base/synchronization/waitable_event.h"
 #include "base/threading/thread.h"
+#include "base/threading/thread_restrictions.h"
 #include "base/threading/thread_task_runner_handle.h"
 #include "base/time/default_tick_clock.h"
 #include "net/base/io_buffer.h"
@@ -694,6 +695,7 @@ class UDPProxyImpl : public UDPProxy {
         from_dest_pipe_(std::move(from_dest_pipe)),
         blocked_(false),
         weak_factory_(this) {
+    base::ScopedAllowBlockingForTesting allow_blocking;
     proxy_thread_.StartWithOptions(
         base::Thread::Options(base::MessageLoop::TYPE_IO, 0));
     base::WaitableEvent start_event(
@@ -709,6 +711,7 @@ class UDPProxyImpl : public UDPProxy {
   }
 
   ~UDPProxyImpl() final {
+    base::ScopedAllowBlockingForTesting allow_blocking;
     base::WaitableEvent stop_event(
         base::WaitableEvent::ResetPolicy::AUTOMATIC,
         base::WaitableEvent::InitialState::NOT_SIGNALED);
